--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -21,7 +21,15 @@ header {
                 padding: 1rem;
                 text-decoration: none;
                 color: $dark;
+                padding-bottom: 3.6rem;
             }
+
+            .active {
+                color: $primary_color;
+                border-bottom: 4px solid $primary_color;
+            }
+
+
         }
     }
 }
