--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -4,11 +4,27 @@ footer {
 
     .header_footer {
         background-color: $primary_color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        padding: 1rem;
+
+        img {
+            width: 50px;
+            padding: 0.25rem;
+        }
+
+        div {
+            display: flex;
+            align-items: center;
+            margin: 1rem;
+        }
     }
 
     .main_footer {
         height: 300px;
-        background-image: url(../assets/img/footer-bg.jpg);
+        background-image: url(./assets/img/footer-bg.jpg);
     }
 
     .footer_footer {
