--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -33,6 +33,8 @@ footer {
 
             .content {
                 width: 30%;
+                display: flex;
+                gap: 1rem;
 
                 .footer_title {
                     padding: 0.5rem 0;
