--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -13,4 +13,35 @@ main {
             object-fit: cover;
         }
     }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 3rem 0;
+
+        .my_card {
+
+            .card_image {
+                width: 200px;
+                aspect-ratio: 1;
+                padding: 0.5rem;
+
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .card_title {
+                color: white;
+                text-transform: uppercase;
+                font-size: 0.75rem;
+                padding: 0.5rem;
+
+            }
+        }
+    }
 }
