--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -4,13 +4,14 @@ main {
     background-color: $secondary_color;
 
     .jumbotron {
-        height: 300px;
+        height: 350px;
         width: 100%;
 
         img {
             height: 100%;
             width: 100%;
             object-fit: cover;
+            object-position: top;
         }
     }
 
@@ -32,6 +33,7 @@ main {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    object-position: top;
                 }
             }
 
