--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -21,6 +21,11 @@ header {
                 text-decoration: none;
                 color: $dark;
                 padding-bottom: 3.6rem;
+
+                &:hover {
+                    color: $primary_color;
+                    border-bottom: 4px solid $primary_color;
+                }
             }
 
             .active {
