--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -13,13 +13,22 @@ main {
             object-fit: cover;
             object-position: top;
         }
+
+        .current {
+            text-transform: uppercase;
+            color: $light;
+            background-color: $primary_color;
+            position: absolute;
+        }
     }
+
 
     .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         padding: 3rem 0;
+
 
         .my_card {
 
