--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -6,6 +6,7 @@ main {
     .jumbotron {
         height: 350px;
         width: 100%;
+        position: relative;
 
         img {
             height: 100%;
@@ -15,10 +16,15 @@ main {
         }
 
         .current {
+            font-size: 1.5rem;
             text-transform: uppercase;
             color: $light;
             background-color: $primary_color;
             position: absolute;
+            padding: 0.5rem 1rem;
+            font-weight: bold;
+            bottom: -17px;
+            left: 10rem;
         }
     }
 
