--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -1,71 +1,9 @@
 @use './palette' as *;
+@use './jumbotron';
+@use './comicList';
 
 main {
     background-color: $secondary_color;
-
-    .jumbotron {
-        height: 350px;
-        width: 100%;
-        position: relative;
-
-        img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            object-position: top;
-        }
-
-        .current {
-            font-size: 1.5rem;
-            text-transform: uppercase;
-            color: $light;
-            background-color: $primary_color;
-            position: absolute;
-            padding: 0.5rem 1rem;
-            font-weight: bold;
-            bottom: -17px;
-            left: 10rem;
-        }
-    }
-
-
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 3rem 0;
-
-
-        .my_card {
-
-            .card_image {
-                width: 200px;
-                aspect-ratio: 1;
-                padding: 0.5rem;
-
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    object-position: top;
-                    cursor: pointer;
-
-                    &:hover {
-                        filter: opacity(40%);
-                    }
-                }
-            }
-
-            .card_title {
-                color: white;
-                text-transform: uppercase;
-                font-size: 0.75rem;
-                padding: 0.5rem;
-
-            }
-        }
-    }
 
     .load {
         text-align: center;
